more styles adjusted  on collapse sidebar

--- a/components/collapse_bar.html
+++ b/components/collapse_bar.html
@@ -1,6 +1,7 @@
-<div class="offcanvas-header" style="border-bottom: 1px solid lightgrey; margin: 0.7rem 0.8rem; padding-bottom: 2rem;">
+<div class="offcanvas-header"
+   style="border-bottom: 1px solid lightgrey; margin: 0.7rem 0.8rem; padding: 1.5rem 0.9rem;">
    <div class="d-flex flex-column">
-      <a class="nav-link" href="../sustavyLinearnychRovnic/index.html">
+      <a class="nav-link" href="../sustavyLinearnychRovnic/index.html" style="margin-bottom: 0.7rem;">
          <svg style="margin-bottom: 5px; " xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-house" viewBox="0 0 16 16">
             <path
@@ -8,7 +9,7 @@
          </svg>
          Lineárna algebra
       </a>
-      <a class="nav-link mt-3" href="../sustavyLinearnychRovnic/index.html">Sústavy lineárnych
+      <a class="nav-link mt-3 mb-3" href="../sustavyLinearnychRovnic/index.html">Sústavy lineárnych
          rovníc</a>
    </div>
    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
