fixed main overflow x

--- a/components/tab_links.html
+++ b/components/tab_links.html
@@ -1,12 +1,14 @@
 <li class="nav-item" role="presentation">
    <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button"
-      role="tab" aria-controls="theory" aria-selected="true">Teória</button>
+      role="tab" aria-controls="theory" aria-selected="true" onclick="updateMainMargin();">Teória</button>
 </li>
 <li class="nav-item" role="presentation">
    <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems"
-      type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Príklady</button>
+      type="button" role="tab" aria-controls="sample-problems" aria-selected="false"
+      onclick="updateMainMargin();">Príklady</button>
 </li>
 <li class="nav-item" role="presentation">
    <button class="nav-link" id="practice-problems-tab" data-bs-toggle="tab" data-bs-target="#practice-problems"
-      type="button" role="tab" aria-controls="practice-problems" aria-selected="false">Kalkulačky</button>
+      type="button" role="tab" aria-controls="practice-problems" aria-selected="false"
+      onclick="updateMainMargin();">Kalkulačky</button>
 </li>
