--- a/components/tab_links2.html
+++ b/components/tab_links2.html
@@ -1,8 +1,9 @@
 <li class="nav-item" role="presentation">
     <button class="nav-link active" id="theory-tab" data-bs-toggle="tab" data-bs-target="#theory" type="button"
-        role="tab" aria-controls="theory" aria-selected="true">Teória</button>
+        role="tab" aria-controls="theory" aria-selected="true" onclick="updateMainMargin();">Teória</button>
 </li>
 <li class="nav-item" role="presentation">
     <button class="nav-link" id="sample-problems-tab" data-bs-toggle="tab" data-bs-target="#sample-problems"
-        type="button" role="tab" aria-controls="sample-problems" aria-selected="false">Príklady</button>
+        type="button" role="tab" aria-controls="sample-problems" aria-selected="false"
+        onclick="updateMainMargin();">Príklady</button>
 </li>
