working gauss elim

--- a/linearnaAlgebra/témy/sustavyLinearnychRovnic/style.css
+++ b/linearnaAlgebra/témy/sustavyLinearnychRovnic/style.css
@@ -15,3 +15,7 @@
 .home:hover {
     background-color: #464343 !important;
 }
+.blue-background {
+    background-color: rgb(228, 228, 228);
+  }
+  
