--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -110,6 +110,20 @@ input:focus {
   color: white;
 }
 
+.list1 li {
+  margin-bottom: 1rem;
+}
+.list1 {
+  text-align: left;
+  margin: 3rem auto;
+  width: 80%;
+}
+
+.graph {
+  margin: auto;
+  max-width: 400px;
+  
+}
 @media screen and (max-width: 991px) {
   .nav-item {
     width: 10rem;
@@ -158,3 +172,25 @@ input:focus {
       margin-top: 5rem;
     }}
   
+    @media screen and (max-width: 530px) {
+      .graph {
+        margin: auto;
+        max-width: 300px;
+        
+      }
+      .list1 {
+        width: 100%;
+      }
+    }
+    @media screen and (max-width: 406px) {
+      .graph {
+        margin: auto;
+        max-width: 200px;
+        
+      }}
+
+      @media screen and (max-width: 308px) {
+        }
+    
+      
+      
