--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -124,6 +124,19 @@ input:focus {
   max-width: 400px;
   
 }
+
+#graphBtn {
+  border: 1px solid #0d6efd;
+  background-color: transparent;
+  border-radius: 6px;
+  padding: 0.4rem; 
+}
+
+#graphBtn:hover {
+  border: 1px solid #0d6efd;
+  background-color: #0d6efd;
+  color: white;
+}
 @media screen and (max-width: 991px) {
   .nav-item {
     width: 10rem;
