--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -137,6 +137,14 @@ input:focus {
   background-color: #0d6efd;
   color: white;
 }
+#derivateBtn {
+  background-color: transparent;
+  border: 1px solid #0d6efd;
+  padding: 0.3rem;
+  border-radius: 6px;
+  margin-left: 1rem;
+
+}
 @media screen and (max-width: 991px) {
   .nav-item {
     width: 10rem;
