--- a/funkcie/styleGraf.css
+++ b/funkcie/styleGraf.css
@@ -143,7 +143,21 @@ input:focus {
   padding: 0.3rem;
   border-radius: 6px;
   margin-left: 1rem;
-
+}
+#derivateBtn:hover {
+  background-color: #0d6efd;
+  color: white;
+}
+#clrBtn {
+  background-color: transparent;
+  border: 1px solid red;
+  padding: 0.3rem;
+  border-radius: 6px;
+  margin-left: 1rem;
+}
+#clrBtn:hover {
+  background-color: red;
+  color: white;
 }
 @media screen and (max-width: 991px) {
   .nav-item {
