--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -60,7 +60,31 @@ h2 {
 .card {
   margin: 1rem;
   width: 15rem;
+  border: none;
+  box-shadow: 0px 0px 10px lightgray;
 }
+
+.card:hover {
+  transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+  transform: scale(1.05);
+  box-shadow: 0px 0px 20px lightgray;
+
+}
+.card-body {
+  height: 200px; /* Set a fixed height for the card body */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.card-body p {
+  flex-grow: 1;
+}
+
+.card-body .btn {
+  align-self: left; /* Vertically center the button */
+}
+
 
 #intro {
   color: grey;
@@ -69,6 +93,12 @@ h2 {
   max-width: 100%; 
   height: auto;
 }
+a  {
+  text-decoration: none ;
+  color: black;
+  
+};
+
 
 @media screen and (max-width: 1250px) {
   body {
