--- a/test/testStyle.css
+++ b/test/testStyle.css
@@ -40,7 +40,7 @@
     padding: 0.8rem;
   }
   .answer:hover {
-    background-color: #e7e7e7 ;
+    border: 1px solid #dad9d9;
   }
   
   .correct {
