fixed paths to images

--- a/components/sidebar.html
+++ b/components/sidebar.html
@@ -34,7 +34,7 @@
          <a class="nav-link" href="../stvMatica/index.html">Štvorcové matice, pojem inverznej matice</a>
       </li>
       <li class="nav-item">
-         <a class="nav-link" href="../invMaticaVypocet">Výpočet inverznej matice</a>
+         <a class="nav-link" href="../invMaticaVypocet/index.html">Výpočet inverznej matice</a>
       </li>
       <li class="nav-item">
          <a class="nav-link" href="../detStvMatice/index.html">Definícia determinantu štvorcovej matice</a>
