--- a/components/collapse_bar.html
+++ b/components/collapse_bar.html
@@ -1,7 +1,7 @@
 <div class="offcanvas-header"
    style="border-bottom: 1px solid lightgrey; margin: 0.7rem 0.8rem; padding: 1.5rem 0.9rem;">
    <div class="d-flex flex-column">
-      <a class="nav-link" href="../sustavyLinearnychRovnic/index.html" style="margin-bottom: 0.7rem;">
+      <a class="nav-link" href="../../index.html" style="margin-bottom: 0.7rem;">
          <svg style="margin-bottom: 5px; " xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
             class="bi bi-house" viewBox="0 0 16 16">
             <path
