--- a/landingPage/mainStyle.css
+++ b/landingPage/mainStyle.css
@@ -6,7 +6,7 @@
 } */
 
 header {
-  background-image: url("../images/newBG.svg");
+  background-image: url("../images/newBG3.svg");
   background-repeat: no-repeat;
   background-position: left;
   height: 400px;
